# sim-engine-ravelin

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  code_new.md  migration.sh
config/: config.toml  goods.toml  goods.yaml
crates/core/: Cargo.toml
crates/core/sim_actions/: Cargo.toml
crates/core/sim_actions/src/: action_types.rs  banking.rs  consumption.rs  fiscal.rs  lib.rs  production.rs  settlement.rs  trading.rs  validation.rs
crates/core/sim_decisions/: Cargo.toml
crates/core/sim_decisions/src/: bank_decisions.rs  consumer_decisions.rs  decision_models.rs  firm_decisions.rs  lib.rs
crates/core/sim_effects/: Cargo.toml
crates/core/sim_effects/src/: agent.rs  application.rs  effect_types.rs  financial.rs  inventory.rs  lib.rs  market.rs
crates/core/sim_prelude/: Cargo.toml
crates/core/sim_prelude/src/: lib.rs
crates/core/sim_traits/: Cargo.toml
crates/core/sim_traits/src/: decision_maker.rs  domain.rs  effect_applicator.rs  lib.rs
crates/core/sim_types/: Cargo.toml
crates/core/sim_types/src/: agents.rs  balance_sheet.rs  goods.rs  instruments.rs  lib.rs  macros.rs  markets.rs  state.rs  system.rs  time.rs  traits.rs
crates/core/src/: lib.rs
crates/domains/: Cargo.toml
crates/domains/banking/: Cargo.toml
crates/domains/banking/src/: behavior.rs  domain.rs  lib.rs  operations.rs  validation.rs
crates/domains/consumption/: Cargo.toml
crates/domains/consumption/src/: behavior.rs  domain.rs  lib.rs  operations.rs  validation.rs
crates/domains/fiscal/: Cargo.toml
crates/domains/fiscal/src/: behaviour.rs  domain.rs  lib.rs
crates/domains/prelude/: Cargo.toml
crates/domains/prelude/src/: lib.rs
crates/domains/production/: Cargo.toml
crates/domains/production/src/: behavior.rs  domain.rs  lib.rs  operations.rs  validation.rs
crates/domains/settlement/: Cargo.toml
crates/domains/settlement/src/: domain.rs  lib.rs
crates/domains/src/: lib.rs
crates/domains/src/banking/: behavior.rs  domain.rs  mod.rs
crates/domains/src/consumption/: behavior.rs  domain.rs  mod.rs
crates/domains/src/fiscal/: behaviour.rs  domain.rs  mod.rs
crates/domains/src/labor/: domain.rs  mod.rs
crates/domains/src/prelude/: mod.rs
crates/domains/src/production/: behavior.rs  domain.rs  mod.rs
crates/domains/src/settlement/: domain.rs
crates/domains/src/trading/: domain.rs  mod.rs
crates/domains/trading/: Cargo.toml
crates/domains/trading/src/: behavior.rs  domain.rs  lib.rs  operations.rs  validation.rs
crates/engine/: Cargo.toml
crates/engine/cli/: bridge.rs  main.rs  routes.rs
crates/engine/src/: api.rs  command.rs  executor.rs  factory.rs  lib.rs  registry.rs  scenario.rs  scheduler.rs  state_manager.rs  tests.rs
crates/engine/src/execution/: actions.rs  effects.rs  executor.rs  mod.rs  scheduler.rs
crates/engine/src/execution/domain/: banking.rs  mod.rs  production.rs  trading.rs
crates/engine/src/execution/domain/banking/: mod.rs
crates/engine/src/execution/domain/production/: mod.rs
crates/engine/src/execution/domain/trading/: mod.rs
crates/engine/src/state/: factory.rs  mod.rs  process.rs  scenario.rs  state.rs
crates/engine/src/state/config/: config.toml
crates/engine/src/test/: mod.rs
crates/engine_core/: Cargo.toml
crates/engine_core/src/: action.rs  decision.rs  effect.rs  lib.rs  state.rs
crates/engine_macros/: cargo.toml
crates/engine_macros/src/: lib.rs
crates/ml/: Cargo.toml
crates/ml/src/: lib.rs  main.rs  process.rs  train.rs
crates/ravelin_core/: Cargo.toml
crates/ravelin_core/src/: action.rs  agent.rs  lib.rs
crates/ravelin_core/src/behaviour/: bank.rs  consumer.rs  firm.rs  mod.rs
crates/ravelin_core/src/execution/: effects.rs  executor.rs  mod.rs
crates/ravelin_core/src/execution/domain/: mod.rs
crates/ravelin_core/src/execution/domain/banking/: mod.rs
crates/ravelin_core/src/execution/domain/production/: mod.rs
crates/ravelin_core/src/execution/domain/trading/: mod.rs
crates/ravelin_core/src/model/: mod.rs
crates/ravelin_core/src/model/agent/: bank.rs  consumer.rs  firm.rs  ml_interface.rs  mod.rs
crates/ravelin_core/src/model/finance/: balance_sheet.rs  market.rs  mod.rs  statistics.rs
crates/ravelin_core/src/model/finance/instruments/: derivative.rs  mod.rs
crates/ravelin_core/src/model/finance/markets/: mod.rs
crates/ravelin_core/src/model/goods/: mod.rs  registry.rs
crates/ravelin_core/src/state/: factory.rs  scenario.rs  state.rs
crates/ravelin_core/src/state/config/: goods.toml
crates/ravelin_core/src/validation/: firm.rs  mod.rs
crates/ravelin_macros/: Cargo.toml
crates/ravelin_macros/src/: lib.rs
crates/ravelin_traits/: Cargo.toml
crates/ravelin_traits/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/shared/src/behaviour/: mod.rs
crates/shared/src/fin_sys/: core.rs  goods.rs  market.rs  mod.rs  statistics.rs
crates/shared/src/fin_sys/instruments/: bond.rs  derivative.rs  mod.rs
crates/shared/src/system/: financial_system.rs  market.rs  mod.rs  sim_action.rs
crates/shared/src/types/: action.rs  agent.rs  balance_sheet.rs  bank.rs  consumer.rs  finance.rs  firm.rs  mod.rs
crates/shared/src/validation/: financial.rs  firm_validation.rs  generic.rs  mod.rs
crates/sim_core/: Cargo.toml
crates/sim_core/src/: lib.rs
crates/sim_core/src/actions/: banking.rs  consumption.rs  fiscal.rs  labour.rs  mod.rs  production.rs  settlement.rs  trading.rs
crates/sim_core/src/decisions/: decision_models.rs  mod.rs
crates/sim_core/src/effects/: agent.rs  application.rs  financial.rs  inventory.rs  market.rs
crates/sim_core/src/prelude/: mod.rs
crates/sim_core/src/types/: agents.rs  balance_sheet.rs  goods.rs  ids.rs  instruments.rs  markets.rs  policy.rs  state.rs  system.rs
crates/sim_macros/: Cargo.toml
crates/sim_macros/src/: lib.rs
