[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = "0.16.1"
crossbeam-channel = "0.5.15"
serde = { version = "1.0.219", features = ["derive"] }
linfa = { version = "0.7.1", features = ["serde"] }
linfa-logistic = { version = "0.7.1", features = ["serde"] }
linfa-trees = { version = "0.7.1", features = ["serde"] }
linfa-linear = { version = "0.7.1", features = ["serde"] }
ndarray = "0.15.0"
bincode = { version = "2.0.1", features = ["serde"] }
lightgbm3 = "1.0.8"
