[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cli"
path = "cli/main.rs"

[dependencies]
ravelin_core = { path = "../ravelin_core" }
rand = "0.9.1"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
crossbeam-channel = "0.5.15"
serde = { version = "1.0.219", features = ["derive"] }
dyn-clone = "1.0.19"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "time"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde_json = "1.0.141"  # Also needed here for API responses
fake = { version = "4.3.0", features = ["derive"] }
thiserror = "2.0.12"
typetag = "0.2.20"
toml = "0.9.4"
serde_with = "3.14.0"
