[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cli"
path = "cli/main.rs"

[dependencies]
# Core simulation crates
sim_core = { path = "../sim_core" }
# Domain crates
domains = { path = "../domains" }
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true} 
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
crossbeam-channel = { workspace = true }
fake = { workspace = true }
typetag = { workspace = true }
serde_with = { workspace = true }
rand_chacha = "0.9.0"
rand_core = "0.9.3"
async-nats = { version = "0.42.0", features = ["websockets"] }
futures = "0.3.31"
inventory = "0.3"
tokio-util = "0.7.16"
anyhow = "1.0.98"
