[package]
name = "ml"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ml"
path = "src/main.rs"

[lib]
name = "ml"
path = "src/lib.rs"

[dependencies]
sim_core = { path = "../sim_core" }
domains = { path = "../domains" }
polars = {version="0.50.0", features=["lazy", "csv", "serde", "parquet"]}
ndarray = "0.15.0"
linfa = {version="0.7.1", features = ["serde"]}
linfa-logistic = {version = "0.7.1", features = ["serde"]}
lightgbm3 = "1.0.8"
dyn-clone = "1.0.19"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
bincode = { version = "2.0.1", features = ["serde"] }