[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = "0.16.1"
crossbeam-channel = "0.5.15"
dyn-clone = "1.0.19"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
typetag = "0.2.20"
ndarray = "0.15.0"
uuid = { version = "1.17.0", features = ["serde", "v4", "v5"] }
chrono = { version = "0.4.41", features = ["serde"] }
once_cell = "1.21.3"
thiserror = "2.0.12"
yaml-rust = "0.4.5"
serde_yaml = "0.9.34"
