[package]
name = "sim_core"
version = "0.1.0"
edition = "2024"

[lib]
name = "sim_core"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
ndarray = { workspace = true }
dyn-clone = { workspace = true }
typetag = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
serde_with = { workspace = true }
sscanf = { workspace = true }
once_cell = { workspace = true }
toml = { workspace = true }
rand = { workspace = true }