[package]
name = "sim_prelude"
version = "0.1.0"
edition = "2024"

[dependencies]
# Depend on all the core crates whose items you want to re-export.
sim_types = { path = "../sim_types" }
sim_actions = { path = "../sim_actions" }
sim_effects = { path = "../sim_effects" }
sim_decisions = { path = "../sim_decisions" }