[package]
name = "sim_types"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
chrono = { workspace = true }
sscanf = { workspace = true }
thiserror = { workspace = true }
dyn-clone = { workspace = true }
typetag = { workspace = true }
once_cell = { workspace = true }
toml = { workspace = true }
